# scheme-bytestructures

./: .gitignore  Makefile.am  README  README.md  TODO.org  TODO.txt  base.scm  bitfield-tests.scm  bytestructures.scm  bytevectors.scm  configure.ac  coverage.scm  guile-coverage.scm  guile-test.scm  guile.am  guile.scm  guix.scm  numeric-native.scm  numeric.scm  pointer.scm  pre-inst-env.in  procedural.scm  r6.scm  r7.scm  run-tests.body.scm  run-tests.guile.scm  run-tests.r7.scm  simple.scm  standard.scm  struct.scm  syntactic.scm  test.scm  union.scm  vector.scm
body/: base.scm  base.syntactic.scm  bitfields.scm  explicit-endianness.scm  numeric.scm  simple.scm  struct.scm  union.scm  utils.scm  vector.scm
bytestructures/: guile.scm  r7.scm  r7.sld
bytestructures/body/: align.scm  base.scm  base.syntactic.scm  bitfields.scm  explicit-endianness.scm  numeric.scm  string.scm  struct.scm  union.scm  utils.scm  vector.scm
bytestructures/guile/: base.scm  bitfields.scm  bytevectors.scm  cstring-pointer.scm  explicit-endianness.scm  ffi.scm  numeric-all.scm  numeric-data-model.scm  numeric-native.scm  numeric.scm  pointer.scm  string.scm  struct.scm  union.scm  vector.scm
bytestructures/r6/: bytevectors.scm
bytestructures/r7/: base.exports.sld  base.scm  base.sld  bitfields.exports.sld  bitfields.sld  explicit-endianness.exports.sld  numeric-all.sld  numeric-metadata.exports.sld  numeric-metadata.scm  numeric.exports.sld  numeric.scm  string.exports.sld  string.sld  struct.exports.sld  struct.scm  struct.sld  union.exports.sld  union.sld  utils.sld  vector.exports.sld  vector.scm
guile/: base.scm  bitfields.scm  explicit-endianness.scm  numeric-all.scm  numeric-metadata.scm  numeric-native.scm  numeric.scm  pointer.scm  simple.scm  standard.scm  struct.scm  union.scm  utils.scm  vector.scm
r6/: bytevectors.scm  numeric.scm  standard.scm
r7/: base.body.scm  base.exports.sld  base.scm  base.sld  bitfields.scm  bitfields.sld  body  bytevectors.scm  bytevectors.sld  explicit-endianness.scm  explicit-endianness.sld  numeric-all.scm  numeric-all.sld  numeric-metadata.sld  numeric.expors.sld  numeric.exports.sld  numeric.sld  simple.body.scm  simple.exports.sld  simple.scm  simple.sld  standard.exports.scm  standard.sld  struct.body.scm  struct.scm  struct.sld  uint8.exports.scm  uint8.sld  union.body.scm  union.exports.sld  union.scm  union.sld  utils.scm  utils.sld  vector.body.scm  vector.exports.scm  vector.scm  vector.sld
